--- a/Marvel-api.html
+++ b/Marvel-api.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="marvel.js"></script>
     <link rel="stylesheet" href="main_marvel.css">
-    <link rel="shortcut icon" type="image/x-icon" href='./escudo.png' />
+    <link rel="shortcut icon" type="image/x-icon" href='./Images/escudo.png' />
     <title>Marvel's API</title>
 </head>
 
 <body>
     <header>
-        <img id='logo'src="./marvel_logo.png">
+        <img id='logo'src="./Images/marvel_logo.png">
     </header>
     <div id='herois'></div>
 
